# devek

./: Cargo.toml  README.md  dist-workspace.toml
docs/: usage.kdl
scripts/: docs.sh
src/: main.rs
