[package]
name = "devek"
version = "0.0.4"
edition = "2024"
repository = "https://github.com/Schniz/devek.git"
license = "MIT"
description = "A simple CLI for copying HTML to clipboard."
homepage = "https://github.com/Schniz/devek"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.48", features = ["derive"] }
clap_usage = "2.0.3"
html2text = "0.15.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
